--- a/todo/templates/slide4.html
+++ b/todo/templates/slide4.html
@@ -2,11 +2,13 @@
 {% block title %}Slide2 - PyNash{% endblock %} 
 {% block content %}
     <header>
-        <h1>Pywebview to the rescue</h1>
+        <h1>Pywebview - reuse those web skillz</h1>
     </header>
     <main>
         <ul>
-            <li>A thin wrapper around native libraries utilizing webview components</li>
+            <li>(Roman Sirokov) pywebview - https://github.com/r0x0r/pywebview</a></li>
+            <li>Thin wrapper around native libraries</li>
+            <li>Uses webcomponents to build links and interactions</li>
             <li>Bottle, flask, web.py</li>
             <li>can freeze the application</li>
         </ul>
