--- a/todo/templates/slide5.html
+++ b/todo/templates/slide5.html
@@ -6,27 +6,26 @@
     </header>
     <main>
         <ul>
-            <li><a href="https://github.com/r0x0r/pywebview">pywebview</a></li>
             <li>
                 Windows - Winforms or Pywin32 comtypes
                 <code>
-                    pip install pywebview[winforms]
+                    <span>pip install pywebview[winforms]</span>
                 </code>
             </li>
             <li>
                 Mac OS X - Cocoa or QT5
                 <code>
-                    pip install pywebview[cocoa]
+                    <span>pip install pywebview[cocoa]<span>
                 </code>
             </li>
             <li>
                 Linux - gtk3 or qt4/5
                 <code>
-                    pip install pywebview[gtk3]
+                    <span>pip install pywebview[gtk3]</span>
                 </code>
                 or
                 <code>
-                    pip install pywebview[qt5]
+                    <span> install pywebview[qt5]</span>
                 </code>
             </li>
         </ul>
