--- a/todo/static/css/styles.css
+++ b/todo/static/css/styles.css
@@ -9,13 +9,34 @@ body {
 }
 
 h1 {
-    font-size: 3.75em;
+    font-size: 3.0em;
     letter-spacing: 3px;
-    margin-bottom: -2px;
+    margin-bottom: 5px;
+}
+
+ul li {
+    margin-top: 10px;
+}
+
+main  {
+    margin-top: 25px;
+}
+
+.intro ul li, li.code {
+    list-style: none;
+}
+
+a {
+    color: #e67e22;
 }
 
 .wrapper {
     margin: 0 35px;
+}
+
+.wrapper  main img {
+    display: block;
+    margin: 0 auto;
 }
 
 header {
@@ -31,4 +52,14 @@ footer {
 footer img {
     width: 32px;
     height: 32px;
+}
+
+code {
+    display: block;
+    margin: 15px 0 15px 20px;
+}
+
+code span {
+    padding: 10px;
+    background: #2c3e50;
 }
