Added slide7, shitfted slide 6 contents to slide 7 and added new who is using context to slide 6

--- a/todo/static/css/styles.css
+++ b/todo/static/css/styles.css
@@ -32,6 +32,11 @@ a {
 
 .wrapper {
     margin: 0 35px;
+    font-size: 1.25em;
+}
+
+.wrapper ul li {
+    font-size: 1.25em;
 }
 
 .wrapper  main img {
@@ -57,6 +62,7 @@ footer img {
 code {
     display: block;
     margin: 15px 0 15px 20px;
+    font-size: 1.15em;
 }
 
 code span {
