--- a/todo/templates/slide4.html
+++ b/todo/templates/slide4.html
@@ -6,10 +6,9 @@
     </header>
     <main>
         <ul>
+            <li>Leight weight cross platform wrapper around web compoentents that display html in a native GUI window</li>
             <li>(Roman Sirokov) pywebview - https://github.com/r0x0r/pywebview</a></li>
-            <li>Thin wrapper around native libraries</li>
-            <li>Uses webcomponents to build links and interactions</li>
-            <li>Bottle, flask, web.py</li>
+            <li>Bottle, flask, web.py to build html5 interfaces</li>
             <li>can freeze the application</li>
         </ul>
     </main>
